--- a/WpfApp5/WpfApp5.csproj
+++ b/WpfApp5/WpfApp5.csproj
@@ -159,18 +159,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Migrations\20230704145627_try.cs" />
-    <Compile Include="Migrations\20230704145627_try.designer.cs">
-      <DependentUpon>20230704145627_try.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\20230705154316_try2.cs" />
-    <Compile Include="Migrations\20230705154316_try2.designer.cs">
-      <DependentUpon>20230705154316_try2.cs</DependentUpon>
+    <Compile Include="Bot_Logic.cs" />
+    <Compile Include="Migrations\20230705161052_try.cs" />
+    <Compile Include="Migrations\20230705161052_try.designer.cs">
+      <DependentUpon>20230705161052_try.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\ContextModelSnapshot.cs" />
     <Compile Include="StaticFunctions.cs" />
-    <Compile Include="TgUser.cs" />
-    <Compile Include="TgUsersInterests.cs" />
+    <Compile Include="Entities\TgUser.cs" />
+    <Compile Include="Entities\TgUsersInterests.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
